comment out printing

--- a/asset_notebook.ipynb
+++ b/asset_notebook.ipynb
@@ -28,22 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (1314656641.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 3\u001b[0;36m\u001b[0m\n\u001b[0;31m    #print(f\"Document: {page_num}:\\n {text}\")\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "document_text = process_documents(pdf_path)\n",
     "for page_num, text in document_text.items():\n",
-    "    #print(f\"Document: {page_num}:\\n {text}\")"
+    "    #print(f\"Document: {page_num}:\\n {text}\")\n",
+    "    pass"
    ]
   },
   {
