extract toc by bookmark or keyword

--- a/asset_notebook.ipynb
+++ b/asset_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -23,17 +23,18 @@
     "import json\n",
     "import yaml\n",
     "import regex\n",
+    "import re\n",
     "\n",
-    "from utils import  TextWord,create_text_lines, merge_text_lines\n",
+    "from utils import  TextWord,create_text_lines, TextLine\n",
     "from detect_language import detect_language_of_document\n",
-    "from keyword_finding import get_keywords_by_language, find_keywords, TOC\n",
+    "from keyword_finding import get_keywords_by_language, find_keywords_in_lines, TOC, extract_by_bookmarks\n",
     "\n",
     "base_dir = os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,48 +47,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_by_bookmarks(doc: fitz.Document) :\n",
-    "        \"\"\"Extracts TOC using PDF bookmarks.\"\"\"\n",
-    "        toc = doc.get_toc()\n",
-    "        if toc:\n",
-    "            entries = [{\"heading\": title, \"page\": page, \"level\": level} for level, title, page in toc]\n",
-    "            return TOC(entries=entries)\n",
-    "        return None\n",
+    "def extract_by_keywords( text_lines: list[TextLine], found_keywords: list[dict]) : ##rmak more robust\n",
     "\n",
-    "def extract_by_keyword(language, matching_params):      \n",
-    "    pass"
+    "    toc_entries = []\n",
+    "    toc_patterns = [\n",
+    "    {\n",
+    "        \"pattern\": regex.compile(\n",
+    "            r\"^(\\d+(\\.\\d+)*)\\s+([\\p{L}\\p{M}\\p{N}\\p{P}\\-\\s]+)\\s*(\\.+|\\s{2,})\\s*([ivxlcdm]+|\\d+)$\",\n",
+    "            flags=regex.VERBOSE | regex.IGNORECASE,\n",
+    "        ),\n",
+    "        \"header_group\": 3,\n",
+    "        \"page_group\": 5,\n",
+    "    },\n",
+    "    {\n",
+    "        \"pattern\": regex.compile(\n",
+    "            r\"^([\\p{L}\\p{M}\\p{N}\\p{P}\\-\\s]+)\\s*(\\.+|\\s{2,})\\s*([ivxlcdm]+|\\d+)$\",\n",
+    "            flags=regex.VERBOSE | regex.IGNORECASE,\n",
+    "        ),\n",
+    "        \"header_group\": 1,\n",
+    "        \"page_group\": 3,\n",
+    "    },\n",
+    "    {\n",
+    "        \"pattern\": regex.compile(\n",
+    "            r\"^(\\d+(\\.\\d+)*)\\s+([\\p{L}\\p{M}\\p{N}\\p{P}\\-\\s]+)\\s+([ivxlcdm]+|\\d+)$\",\n",
+    "            flags=regex.VERBOSE | regex.IGNORECASE,\n",
+    "        ),\n",
+    "        \"header_group\": 3,\n",
+    "        \"page_group\": 4,\n",
+    "    },\n",
+    "    {\n",
+    "        \"pattern\": regex.compile(\n",
+    "            r\"^([\\p{L}\\p{M}\\p{N}\\p{P}\\-\\s]+)\\s+([ivxlcdm]+|\\d+)$\",\n",
+    "            flags=regex.VERBOSE | regex.IGNORECASE,\n",
+    "        ),\n",
+    "        \"header_group\": 1,\n",
+    "        \"page_group\": 2,\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "    for keyword_entry in found_keywords:\n",
+    "        line_index = text_lines.index(keyword_entry[\"line\"])\n",
+    "        break  # only first keyword\n",
+    "\n",
+    "     # Process subsequent lines starting from the keyword's line\n",
+    "    for line in text_lines[line_index+1:]:\n",
+    "        \n",
+    "        line_matched = False\n",
+    "\n",
+    "        for entry in toc_patterns:\n",
+    "            toc_pattern = entry[\"pattern\"]\n",
+    "            match = toc_pattern.match(line.line_text())\n",
+    "            if match:\n",
+    "                header = match.group(entry[\"header_group\"]).strip()\n",
+    "                page = match.group(entry[\"page_group\"]).strip()\n",
+    "                cleaned_header = clean_header(header)\n",
+    "                toc_entries.append({\"header\": cleaned_header, \"page\": page})\n",
+    "                line_matched = True\n",
+    "                break\n",
+    "\n",
+    "        if not line_matched:\n",
+    "            print(f\"Unmatched line: {line.line_text()}\")\n",
+    "            break\n",
+    "    return TOC(entries=toc_entries) if toc_entries else None\n",
+    "\n",
+    "def clean_header(header: str) -> str:\n",
+    "    return regex.sub(r\"\\.{2,}\", \"\", header).strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TOC(entries=[{'heading': 'NAB 10-25 Cover', 'page': 1, 'level': 1}, {'heading': 'Titelseite innen', 'page': 3, 'level': 1}, {'heading': 'Copyright', 'page': 4, 'level': 1}, {'heading': 'Inhaltsverzeichnis', 'page': 5, 'level': 1}, {'heading': 'Tabellenverzeichnis', 'page': 5, 'level': 1}, {'heading': 'Figurenverzeichnis', 'page': 6, 'level': 1}, {'heading': '1 Einleitung und Zielsetzung', 'page': 7, 'level': 1}, {'heading': '2 Geologie', 'page': 9, 'level': 1}, {'heading': '2.1 Beschreibung des Untersuchungsgebietes', 'page': 9, 'level': 2}, {'heading': '2.2 Prognose Bohrprofil', 'page': 12, 'level': 2}, {'heading': '3 Bohrarbeiten', 'page': 13, 'level': 1}, {'heading': '3.1 Bohrspülung', 'page': 15, 'level': 2}, {'heading': '4 Vorgesehene Untersuchungen', 'page': 17, 'level': 1}, {'heading': '4.1 Bohrstellen-Geologie', 'page': 17, 'level': 2}, {'heading': '4.2 Bohrloch-Geophysik', 'page': 19, 'level': 2}, {'heading': '4.3 Hydrogeologie und Hydrochemie', 'page': 22, 'level': 2}, {'heading': '4.4 Geotechnik und Felsmechanik', 'page': 25, 'level': 2}, {'heading': '5 Bohrplatz', 'page': 29, 'level': 1}, {'heading': '6 Projektorganisation', 'page': 31, 'level': 1}, {'heading': '7 Referenzen', 'page': 33, 'level': 1}])\n"
+     ]
+    }
+   ],
    "source": [
     "with fitz.open(pdf_path) as doc:\n",
-    "    text_lines = create_text_lines(doc) # doesnt correctly split lines yet ...\n",
-    "    #merged_text_lines = merge_text_lines(text_lines)\n",
-    "    for line in text_lines:\n",
-    "       # print(line.line_text())\n",
     "\n",
-    "        pass"
+    "    text_lines = create_text_lines(doc) \n",
+    "    language = detect_language_of_document(doc)\n",
+    "    table_of_content = extract_by_bookmarks(doc)\n",
+    "\n",
+    "    if not table_of_content:\n",
+    "        keywords = get_keywords_by_language(language, matching_params)\n",
+    "    \n",
+    "        found_keywords =find_keywords_in_lines(text_lines, keywords)\n",
+    "        if found_keywords:\n",
+    "            table_of_content =extract_by_keywords(text_lines, found_keywords) \n",
+    "    \n",
+    "    print(table_of_content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "with fitz.Document(pdf_path) as doc:\n",
     "    language = detect_language_of_document(doc)\n",
     "\n",
-    "    table_of_content = extract_by_bookmarks(doc)\n",
     "    keywords = get_keywords_by_language(language, matching_params)\n",
+    "    table_of_content = extract_by_bookmarks(doc)\n",
     "    found_keywords = []\n",
     "    for page_index, page in enumerate(doc):\n",
     "        page_number = page_index + 1\n",
@@ -98,28 +169,9 @@
     "            rect = fitz.Rect(x0, y0, x1, y1) * page.rotation_matrix\n",
     "            text_word = TextWord(rect= rect, text = word, page = page_number)\n",
     "            words.append(text_word)\n",
-    "            key=find_keywords(text_word, keywords)\n",
-    "            if key:\n",
-    "                found_keywords.append(key)\n",
     "                \n",
     "    table_of_content=table_of_content.to_dict()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TextLine(Rect(10.0, 20.0, 100.0, 30.0),Hello World)\n",
-      "Cannot create an empty TextLine.\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
