finnd toc by keyword, pattern

--- a/asset_notebook.ipynb
+++ b/asset_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -21,20 +21,19 @@
     "import os\n",
     "import fitz\n",
     "import json\n",
-    "import yaml\n",
-    "import regex\n",
-    "import re\n",
     "\n",
-    "from utils import  TextWord,create_text_lines, TextLine\n",
+    "\n",
+    "from utils import  TextWord,create_text_lines\n",
     "from detect_language import detect_language_of_document\n",
-    "from keyword_finding import get_keywords_by_language, find_keywords_in_lines, TOC, extract_by_bookmarks\n",
-    "\n",
+    "from keyword_finding import get_keywords_by_language\n",
+    "from TOCExtractor import TOCExtractor\n",
+    "import yaml\n",
     "base_dir = os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,87 +46,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_by_keywords( text_lines: list[TextLine], found_keywords: list[dict]) : ##rmak more robust\n",
-    "\n",
-    "    toc_entries = []\n",
-    "    toc_patterns = [\n",
-    "    {\n",
-    "        \"pattern\": regex.compile(\n",
-    "            r\"^(\\d+(\\.\\d+)*)\\s+([\\p{L}\\p{M}\\p{N}\\p{P}\\-\\s]+)\\s*(\\.+|\\s{2,})\\s*([ivxlcdm]+|\\d+)$\",\n",
-    "            flags=regex.VERBOSE | regex.IGNORECASE,\n",
-    "        ),\n",
-    "        \"header_group\": 3,\n",
-    "        \"page_group\": 5,\n",
-    "    },\n",
-    "    {\n",
-    "        \"pattern\": regex.compile(\n",
-    "            r\"^([\\p{L}\\p{M}\\p{N}\\p{P}\\-\\s]+)\\s*(\\.+|\\s{2,})\\s*([ivxlcdm]+|\\d+)$\",\n",
-    "            flags=regex.VERBOSE | regex.IGNORECASE,\n",
-    "        ),\n",
-    "        \"header_group\": 1,\n",
-    "        \"page_group\": 3,\n",
-    "    },\n",
-    "    {\n",
-    "        \"pattern\": regex.compile(\n",
-    "            r\"^(\\d+(\\.\\d+)*)\\s+([\\p{L}\\p{M}\\p{N}\\p{P}\\-\\s]+)\\s+([ivxlcdm]+|\\d+)$\",\n",
-    "            flags=regex.VERBOSE | regex.IGNORECASE,\n",
-    "        ),\n",
-    "        \"header_group\": 3,\n",
-    "        \"page_group\": 4,\n",
-    "    },\n",
-    "    {\n",
-    "        \"pattern\": regex.compile(\n",
-    "            r\"^([\\p{L}\\p{M}\\p{N}\\p{P}\\-\\s]+)\\s+([ivxlcdm]+|\\d+)$\",\n",
-    "            flags=regex.VERBOSE | regex.IGNORECASE,\n",
-    "        ),\n",
-    "        \"header_group\": 1,\n",
-    "        \"page_group\": 2,\n",
-    "    },\n",
-    "]\n",
-    "\n",
-    "    for keyword_entry in found_keywords:\n",
-    "        line_index = text_lines.index(keyword_entry[\"line\"])\n",
-    "        break  # only first keyword\n",
-    "\n",
-    "     # Process subsequent lines starting from the keyword's line\n",
-    "    for line in text_lines[line_index+1:]:\n",
-    "        \n",
-    "        line_matched = False\n",
-    "\n",
-    "        for entry in toc_patterns:\n",
-    "            toc_pattern = entry[\"pattern\"]\n",
-    "            match = toc_pattern.match(line.line_text())\n",
-    "            if match:\n",
-    "                header = match.group(entry[\"header_group\"]).strip()\n",
-    "                page = match.group(entry[\"page_group\"]).strip()\n",
-    "                cleaned_header = clean_header(header)\n",
-    "                toc_entries.append({\"header\": cleaned_header, \"page\": page})\n",
-    "                line_matched = True\n",
-    "                break\n",
-    "\n",
-    "        if not line_matched:\n",
-    "            print(f\"Unmatched line: {line.line_text()}\")\n",
-    "            break\n",
-    "    return TOC(entries=toc_entries) if toc_entries else None\n",
-    "\n",
-    "def clean_header(header: str) -> str:\n",
-    "    return regex.sub(r\"\\.{2,}\", \"\", header).strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TOC(entries=[{'heading': 'NAB 10-25 Cover', 'page': 1, 'level': 1}, {'heading': 'Titelseite innen', 'page': 3, 'level': 1}, {'heading': 'Copyright', 'page': 4, 'level': 1}, {'heading': 'Inhaltsverzeichnis', 'page': 5, 'level': 1}, {'heading': 'Tabellenverzeichnis', 'page': 5, 'level': 1}, {'heading': 'Figurenverzeichnis', 'page': 6, 'level': 1}, {'heading': '1 Einleitung und Zielsetzung', 'page': 7, 'level': 1}, {'heading': '2 Geologie', 'page': 9, 'level': 1}, {'heading': '2.1 Beschreibung des Untersuchungsgebietes', 'page': 9, 'level': 2}, {'heading': '2.2 Prognose Bohrprofil', 'page': 12, 'level': 2}, {'heading': '3 Bohrarbeiten', 'page': 13, 'level': 1}, {'heading': '3.1 Bohrspülung', 'page': 15, 'level': 2}, {'heading': '4 Vorgesehene Untersuchungen', 'page': 17, 'level': 1}, {'heading': '4.1 Bohrstellen-Geologie', 'page': 17, 'level': 2}, {'heading': '4.2 Bohrloch-Geophysik', 'page': 19, 'level': 2}, {'heading': '4.3 Hydrogeologie und Hydrochemie', 'page': 22, 'level': 2}, {'heading': '4.4 Geotechnik und Felsmechanik', 'page': 25, 'level': 2}, {'heading': '5 Bohrplatz', 'page': 29, 'level': 1}, {'heading': '6 Projektorganisation', 'page': 31, 'level': 1}, {'heading': '7 Referenzen', 'page': 33, 'level': 1}])\n"
+      "Unmatched line: Tabellenverzeichnis\n",
+      "Header: Inhaltsverzeichnis, Page: I\n",
+      "Header: Tabellenverzeichnis, Page: I\n",
+      "Header: Figurenverzeichnis, Page: II\n",
+      "Header: Einleitung und Zielsetzung, Page: 1\n",
+      "Header: Geologie, Page: 3\n",
+      "Header: Beschreibung des Untersuchungsgebietes, Page: 3\n",
+      "Header: Prognose Bohrprofil, Page: 6\n",
+      "Header: Bohrarbeiten, Page: 7\n",
+      "Header: Bohrspülung, Page: 9\n",
+      "Header: Vorgesehene Untersuchungen, Page: 11\n",
+      "Header: Bohrstellen-Geologie, Page: 11\n",
+      "Header: Bohrloch-Geophysik, Page: 13\n",
+      "Header: Hydrogeologie und Hydrochemie, Page: 16\n",
+      "Header: Geotechnik und Felsmechanik, Page: 19\n",
+      "Header: Bohrplatz, Page: 23\n",
+      "Header: Projektorganisation, Page: 25\n",
+      "Header: Referenzen, Page: 27\n",
+      "TOC(entries=[{'header': 'Inhaltsverzeichnis', 'page': 'I'}, {'header': 'Tabellenverzeichnis', 'page': 'I'}, {'header': 'Figurenverzeichnis', 'page': 'II'}, {'header': 'Einleitung und Zielsetzung', 'page': '1'}, {'header': 'Geologie', 'page': '3'}, {'header': 'Beschreibung des Untersuchungsgebietes', 'page': '3'}, {'header': 'Prognose Bohrprofil', 'page': '6'}, {'header': 'Bohrarbeiten', 'page': '7'}, {'header': 'Bohrspülung', 'page': '9'}, {'header': 'Vorgesehene Untersuchungen', 'page': '11'}, {'header': 'Bohrstellen-Geologie', 'page': '11'}, {'header': 'Bohrloch-Geophysik', 'page': '13'}, {'header': 'Hydrogeologie und Hydrochemie', 'page': '16'}, {'header': 'Geotechnik und Felsmechanik', 'page': '19'}, {'header': 'Bohrplatz', 'page': '23'}, {'header': 'Projektorganisation', 'page': '25'}, {'header': 'Referenzen', 'page': '27'}])\n"
      ]
     }
    ],
@@ -136,41 +80,20 @@
     "\n",
     "    text_lines = create_text_lines(doc) \n",
     "    language = detect_language_of_document(doc)\n",
-    "    table_of_content = extract_by_bookmarks(doc)\n",
     "\n",
-    "    if not table_of_content:\n",
-    "        keywords = get_keywords_by_language(language, matching_params)\n",
-    "    \n",
-    "        found_keywords =find_keywords_in_lines(text_lines, keywords)\n",
-    "        if found_keywords:\n",
-    "            table_of_content =extract_by_keywords(text_lines, found_keywords) \n",
+    "    extractor = TOCExtractor(matching_params)\n",
+    "\n",
+    "        # Extract the TOC\n",
+    "    table_of_content = extractor.extract_toc(doc,text_lines, language)\n",
+    "\n",
+    "    # Output results\n",
+    "    if table_of_content:\n",
+    "        for entry in table_of_content.entries:\n",
+    "            print(f\"Header: {entry['header']}, Page: {entry['page']}\")\n",
+    "    else:\n",
+    "        print(\"No TOC found.\")\n",
     "    \n",
     "    print(table_of_content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with fitz.Document(pdf_path) as doc:\n",
-    "    language = detect_language_of_document(doc)\n",
-    "\n",
-    "    keywords = get_keywords_by_language(language, matching_params)\n",
-    "    table_of_content = extract_by_bookmarks(doc)\n",
-    "    found_keywords = []\n",
-    "    for page_index, page in enumerate(doc):\n",
-    "        page_number = page_index + 1\n",
-    "        words = []\n",
-    "        words_by_line = {}\n",
-    "\n",
-    "        for x0, y0, x1, y1, word, block_no, line_no, _word_no in page.get_text(\"words\"):\n",
-    "            rect = fitz.Rect(x0, y0, x1, y1) * page.rotation_matrix\n",
-    "            text_word = TextWord(rect= rect, text = word, page = page_number)\n",
-    "            words.append(text_word)\n",
-    "                \n",
-    "    table_of_content=table_of_content.to_dict()"
    ]
   },
   {
